--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,7 +1,8 @@
 body {
-    color: blue;
+    background: #1e1f24;
+    color: #333;
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial;
     font-size: 16px;
     margin: 0;
     padding: 0;
@@ -14,6 +15,11 @@ body {
     font-weight: bold;
     margin: 0;
     padding: 0.5em;
+}
+
+#cabecera #logo{
+    width: 20px;
+    vertical-align: middle;
 }
 
 #cabecera #tagline
@@ -35,4 +41,10 @@ body {
 #container h1
 {
     font-size: 20px;
+}
+
+#post
+{
+    background: white;
+    padding: 1em;
 }
